# euclid_rag

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile_ollama  LICENSE  Makefile  README.md  api.html  changelog.html  compose.yaml  entrypoint.sh  genindex.html  index.html  objects.inv  ollama.sh  py-modindex.html  pyproject.toml  requirements.txt  ruff-shared.toml  search.html  searchindex.js  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  docs.yaml
.streamlit/: config.toml
_build/html/: .buildinfo  api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/.doctrees/: api.doctree
_build/html/.doctrees/api/: euclid.rag.__version__.doctree
_build/html/.doctrees/developer-guide/: development.doctree  release.doctree
_build/html/.doctrees/user-guide/: index.doctree
_build/html/_sources/: changelog.md.txt  index.rst.txt
_build/html/_sources/api/: euclid.rag.__version__.rst.txt
_build/html/_sources/developer-guide/: index.rst.txt
_build/html/_sources/user-guide/: index.rst.txt
_build/html/api/: euclid.rag.__version__.html
_build/html/developer-guide/: development.html  index.html  release.html
_build/html/user-guide/: index.html
_build/linkcheck/: output.json
_build/linkcheck/.doctrees/: changelog.doctree  index.doctree
_build/linkcheck/.doctrees/api/: euclid.rag.__version__.doctree
_build/linkcheck/.doctrees/developer-guide/: index.doctree  release.doctree
_sources/developer-guide/: release.rst.txt
_sources/user-guide/: configuration.rst.txt  installation.rst.txt  usage.rst.txt
_static/: acronyms.json
changelog.d/: 20250921_233647_jennifer.pollack_docs_publish.md
config/: app_config.yaml
developer-guide/: development.html  index.html  release.html
docs/: _rst_epilog.rst  api.rst  conf.py  index.rst
docs/developer-guide/: development.rst  release.rst
docs/user-guide/: configuration.rst  index.rst  ingestion.rst  installation.rst  troubleshooting.rst  usage.rst
faiss_index/: index.pkl
python/: config.yaml
python/euclid/: __init__.py
python/euclid/faiss_index/: index.pkl
python/euclid/rag/: __init__.py  app.py  app_config.yaml  app_refactor.py  chatbot.py  config_utils.py  custom_weaviate_vector_store.py  embedding_utils.py  layout.py  retriever_utils.py  streamlit_callback.py
python/euclid/rag/Agents/: publication_agent.py
python/euclid/rag/FAISS_vectorstore/: __init__.py  index.pkl  vectorstore_embedder.py
python/euclid/rag/agents/: publication_tool.py
python/euclid/rag/extra_scripts/: deduplication.py  dpdd_config.yaml  parse_ec_bibtex.py  parse_jira_tickets.py  populate_dpdd_vector_store.py  populate_dpdd_vector_store_description.md  vectorstore_embedder.py
python/euclid/rag/ingestion/: dpdd_config.yaml  ingest_dpdd.py  ingest_dpdd_readme.md  ingest_publications.py  ingest_redmine.py
python/euclid/rag/ingestion/config/: ingest_dpdd_config.yaml
python/euclid/rag/redmine/: redmine_cleaner.py  redmine_scraper.py
python/euclid/rag/retrievers/: generic_retrieval_tool.py  publication_tool.py  redmine_tool.py
python/euclid/rag/utils/: acronym_handler.py  config.py  device.py  redmine_cleaner.py
python/rubin/rag/: app.py  chatbot.py  custom_weaviate_vector_store.py  layout.py  streamlit_callback.py
python/rubin/rag/extra_scripts/: __init__.py  parse_confluence.py  parse_jira_tickets.py  universal_weaviate_uploader.py
scripts_dpdd/: README.md  get_data.py  h1_sections.csv  other_sections.csv  populate_dpdd_vector_store.py  populate_vector_store.py  requirements.txt  topics2get.csv
scripts_dpdd/dpdd_ingestion_config/: dpdd_config.yaml
tests/: conftest.py  test_ingest_redmine.py  version_test.py
tests/redmine/: test_redmine_cleaner.py
tests/utils/: test_redmine_cleaner.py
user-guide/: configuration.html  index.html  ingestion.html  installation.html  troubleshooting.html  usage.html
vector_store/: index.faiss  index.pkl
vector_stores/faiss_euclid_external/: index.faiss  index.pkl
